2003/12/09 15:41 (-0500) muppetman

	* Makefile.PL: a little bit churn on the pkg-config names, so we can
	get info on and create version guard macros for libgnome and whatever
	else.

	* xs/GnomeHelp.xs, xs/GnomeURL.xs: the _with_env functions didn't
	exist until libgnome 2.2.1; use version guards to avoid missing
	symbols.

2003/12/04 19:02 (+0100) kaffeetisch

	* gnome2perl.h
	* t/GnomeHelp
	* t/GnomeURL
	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Implement and test
	Gnome2::Help::display_desktop_with_env and
	Gnome2::URL::show_with_env.

2003/12/02 20:40 (+0100) kaffeetisch

	* gnome.typemap: Use T_GPERL_GENERIC_WRAPPER for GnomeUIInfo's.

	* gnome.typemap
	* t/GnomeIconList.t
	* xs/GnomeIconList.xs: Create and register a custom GFlags type so
	we can use the cool flags magician in Gnome2::IconList::new.

	* xs/GnomeIconTextItem.xs
	* xs/GnomePasswordDialog.xs: Add license boilerplate.

	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Add FIXME comments.

2003/11/30 14:48 (+0100) kaffeetisch

	A xs/GnomeIconTextItem.xs
	* t/GnomeIconList.t
	* MANIFEST: Initial implementation and test for GnomeIconTextItem.

	* xs/GnomeIconLookup.xs: Fix critical bug in
	Gnome2::IconTheme::lookup that caused a segfault.

	* xs/GnomeIconTheme.xs: Remove needless spaces at the end of a
	line.

2003/11/29 17:01 (+0100) kaffeetisch

	* gnome2perl.h: Include bonobo/bonobo-dock.h and
	bonobo/bonobo-dock-item.h.

2003/11/29 09:15 (-0500) muppetman

	* xs/GnomeAppHelper.xs: remove unused variables.

2003/11/28 22:19 (+0100) kaffeetisch

	* Gnome2.pm
	* META.yml
	* README: Prepare the release of 0.49.

	* t/GnomePasswordDialog.t
	* xs/Gnome2.xs: Change the package name from
	Gnome2::Authentication::Manager to Gnome2::AuthenticationManager.

	* xs/GnomeAppHelper: Add API documentation.

	* xs/GnomeGConf.xs: Put API documentation into Gnome2::main so
	that we don't overwrite Gnome2::GConf's POD/man pages.

2003/11/26 14:37 (-0500) muppetman

	* gnome2perl.h